[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Boar/Hit-Vanish/Hit-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Boar/Walk/Walk-Base-Sheet.png" type="Texture" id=2]
[ext_resource path="res://scripts/Enemies/Boar Enemy.gd" type="Script" id=3]
[ext_resource path="res://Assets/Boar/Run/Run-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Scenes/HitBox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 16, 13 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "Hurt",
"speed": 3.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 8.75, 2 )

[sub_resource type="CapsuleShape2D" id=21]
radius = 27.9998
height = 90.0003

[node name="BoarEnemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="HitBox" parent="." groups=["Enemy"] instance=ExtResource( 5 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -3, 3 )
shape = SubResource( 22 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
animation = "Walk"
frame = 4
playing = true

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.75, 14 )
shape = SubResource( 13 )

[node name="LedgeCheckL" type="RayCast2D" parent="."]
position = Vector2( -18.5, 10 )
enabled = true
cast_to = Vector2( -1.5, 9.5 )

[node name="LedheCheckR" type="RayCast2D" parent="."]
position = Vector2( 12, 10 )
enabled = true
cast_to = Vector2( 1.5, 9 )

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( -71, 2.5 )
rotation = 1.5708
shape = SubResource( 21 )

[node name="Stagger" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
[connection signal="timeout" from="Stagger" to="." method="_on_Timer_timeout"]
